--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -88,5 +88,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_admin_dashboard.scss";
 @import "pendigital/factory_tabs.scss";
 @import "pendigital/factory_modals.scss";
+@import "pendigital/factory_search.scss";
 
 /* Custom CSS rules come here */
