--- a/bootstrap_theme/pendigital/factory_blog_post.scss
+++ b/bootstrap_theme/pendigital/factory_blog_post.scss
@@ -281,6 +281,451 @@
 }
 
 
+.pd-blog-post-2 {
+    .pd-blog-post-2-category {
+        text-decoration: none;
+        font-size: 0.9rem;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+        font-weight: 300;
+        display: inline-block;
+        margin-bottom: 4px;
+        color: $pd-oxford-blue;
+
+        &:focus {
+            outline: 2px dotted $pd-oxford-blue;
+            outline-offset: 4px;
+        }
+    }
+
+    h1 {
+        font-size: 2rem;
+        line-height: 1.4;
+        font-weight: 700;
+        padding-top: 10px;
+    }
+
+    .pd-btn {
+        padding: 14px 30px;
+        color: white;
+        text-transform: uppercase;
+        background: transparent;
+        border: 2px solid $info;
+        transition: background 0.4s;
+        display: inline-block;
+        text-decoration: none;
+        letter-spacing: 0.15em;
+        font-weight: 700;
+        font-size: 0.9rem;
+    
+        .pd-icon {
+            fill: $white;
+        }
+    
+        // box-shadow: 0px 4px 6px 1px rgba(0, 0, 0, 0.4);
+        &:hover {
+            // background: darken($info, 10%);
+            background: $info;
+            color: $white;
+    
+            .pd-icon {
+                fill: $white;
+            }
+        }
+    
+        &:focus {
+            outline: 2px dotted $white;
+            outline-offset: 4px;
+        }
+    
+        span {
+            .pd-icon {
+                fill: $white;
+            }
+        }
+    }
+    
+    .pd-btn.pd-inverted {
+        color: $pd-oxford-blue;
+        background: transparent;
+        border: 2px solid $pd-oxford-blue;
+    
+        .pd-icon {
+            fill: $pd-oxford-blue;
+        }
+    
+        &:hover {
+            background: $info;
+            border: 2px solid $pd-ochre;
+            color: $white;
+    
+            .pd-icon {
+                fill: $white;
+            }
+        }
+    
+        &:focus {
+            outline: 2px dotted $pd-ochre;
+            outline-offset: 4px;
+        }
+    }
+    
+    .pd-btn.pd-btn-sm {
+        padding: 14px 16px;
+    }
+
+    .pd-blog-post-2-intro-outer {
+        padding-top: 20px;
+        padding-bottom: 20px;
+
+        @media screen and (max-width: 767px) {
+            display: block;
+        }
+
+        @media (min-width: 768px) {
+            display: flex;
+            flex-direction: row;
+            justify-content: start;
+            align-items: center;
+        }
+
+        // col 1
+        .pd-blog-post-2-author-outer {
+            display: flex;
+            flex-direction: row;
+            flex: 1 1 auto;
+
+            p {
+                white-space: nowrap;
+            }
+
+            .pd-blog-post-2-author-img-outer {
+                width: 64px;
+                height: 64px;
+                overflow: hidden;
+                border-radius: 50em;
+                position: relative;
+
+                img {
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    object-position: center center;
+                }
+            }
+
+            .pd-blog-post-2-author-name {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+
+                p {
+                    margin-bottom: 0px;
+                    padding-left: 10px;
+                }
+
+                .pd-blog-post-2-author-name {
+                    font-weight: 700;
+                    font-size: 1rem;
+                }
+
+                .pd-blog-post-2-author-title {
+                    font-weight: 300;
+                    text-transform: uppercase;
+                    font-size: 0.7rem;
+                }
+            }
+        }
+
+        // col 2
+        .pd-blog-post-2-date {
+            font-size: 0.7;
+            font-weight: 700;
+            flex: 1 1 auto;
+            display: flex;
+            flex-direction: row;
+            white-space: nowrap;
+
+            span {
+                .pd-icon {
+                    fill: $pd-ochre;
+                }
+            }
+        }
+
+        // col 3
+    }
+
+    .pd-blog-post-2-img {
+        width: 100%;
+        height: auto;
+        opacity: 0;
+        transition: opacity 0.4s;
+    }
+
+    .pd-blog-post-2-img.pd-blog-post-2-loaded {
+        opacity: 1;
+    }
+
+    .pd-blog-post-2-tag-list {
+        flex: 0 1 auto;
+        width: 100%;
+
+        // margin-left: -4px;
+        a {
+            display: inline-block;
+            text-decoration: none;
+            font-size: 0.7rem;
+            border: 1px solid $pd-ochre;
+            padding: 3px 6px;
+            margin: 4px;
+            color: $pd-oxford-blue;
+
+            // border-radius: 4px;
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+            transition: background 0.4s, color 0.4s, border 0.4s;
+
+            &:hover {
+                border: 1px solid $info;
+                background: $info;
+                color: $white;
+            }
+
+            &:focus {
+                outline: 2px dotted $primary;
+                outline-offset: 4px;
+            }
+        }
+    }
+
+    .pd-blog-post-2-cats-col {
+        h2,
+        h3 {
+            font-weight: 700;
+            font-size: 0.9rem;
+            text-transform: uppercase;
+        }
+
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            padding-bottom: 40px;
+
+            li {
+                padding-bottom: 8px;
+                padding-top: 4px;
+                border-bottom: 1px solid $pd-ochre;
+
+                a {
+                    text-transform: uppercase;
+                    font-size: 0.7rem;
+                    text-decoration: none;
+                    color: $pd-oxford-blue;
+                    transition: color 0.4s;
+                    letter-spacing: 0.1em;
+                    font-weight: 300;
+
+                    &:hover {
+                        color: lighten($pd-oxford-blue, 10%);
+                    }
+
+                    &:focus {
+                        outline: 2px dotted $pd-oxford-blue;
+                        outline-offset: 4px;
+                    }
+                }
+            }
+        }
+
+        .pd-blog-post-2-banner {
+            // background: linear-gradient(180deg, $pd-isaballine, darken($pd-isaballine, 10%));
+            background-color: $pd-oxford-blue;
+            padding-top: 90px;
+            padding-left: 20px;
+            padding-right: 20px;
+            padding-bottom: 40px;
+            position: relative;
+
+            .pd-blog-post-2-banner-headline {
+                font-weight: 300;
+                font-size: 1.4rem;
+                line-height: 1.4;
+
+                strong {
+                    font-weight: 700;
+                }
+
+                @media (max-width: 991px) {
+                    font-size: 1.4rem;
+                }
+            }
+
+            .pd-blog-post-2-banner-subHeadline {
+                font-weight: 300;
+                font-size: 1rem;
+            }
+
+            .pd-blog-post-2-banner-mask {
+                position: absolute;
+                top: 0;
+                height: 100px;
+                width: 100px;
+                overflow: hidden;
+
+                .pd-blog-post-2-banner-circle-outer {
+                    transition: transform 0.4s;
+                    position: absolute;
+                    top: -28px;
+                    width: 100px;
+                    height: 100px;
+                    background-color: $pd-bone;
+                    border-radius: 50em;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+
+                    .pd-blog-post-2-banner-circle-inner {
+                        width: 60px;
+                        height: 60px;
+                        border-radius: 50em;
+                        background-color: $pd-ochre;
+                        border: 2px solid $pd-ochre;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: center;
+                        align-items: center;
+
+                        .pd-icon {
+                            width: 34px;
+                            height: 34px;
+                            fill: $white;
+                        }
+                    }
+                }
+            }
+
+            .pd-blog-post-2-banner-mask.pd-left {
+                left: 0;
+
+                .pd-blog-post-2-banner-circle-outer {
+                    left: -29px;
+                }
+            }
+
+            .pd-blog-post-2-banner-mask.pd-right {
+                right: 0;
+
+                .pd-blog-post-2-banner-circle-outer {
+                    right: -29px;
+                }
+            }
+        }
+    }
+
+    .pd-blog-post-2-header-divider {
+        @media screen and (max-width: 1199px) {
+            display: none;
+        }
+        @media (min-width: 1200px) {
+            flex: 0 0 2px;
+            height: 80px;
+            background-color: $pd-ochre;
+            margin-left: 40px;
+            margin-right: 40px;
+
+        }
+    }
+
+    .pd-blog-post-2-social-outer {
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding-top: 0px;
+        padding-right: 16px;
+        min-height: 34px;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;
+
+        a {
+            display: inline-block;
+            transition: transform 0.4s;
+
+            .pd-icon {
+                fill: $pd-ochre;
+            }
+
+            img {
+                margin: 4px;
+                width: 24px;
+                height: 24px;
+            }
+
+            &:hover {
+                transform: scale(1.1);
+            }
+
+            &:focus {
+                outline: 2px dotted $primary;
+            }
+        }
+
+        @media (max-width: 575px) {
+            display: none;
+        }
+    }
+
+    .pd-blog-post-2-share-article {
+        padding-top: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: start;
+
+        p {
+            color: $gray-700;
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+            font-size: 0.9rem;
+            font-weight: 700;
+        }
+
+        a {
+            display: inline-block;
+            transition: transform 0.4s;
+
+            .pd-icon {
+                fill: $pd-ochre;
+            }
+            
+            
+            img {
+                margin: 8px;
+            }
+
+            &:hover {
+                transform: scale(1.1);
+            }
+
+            &:focus {
+                outline: 2px dotted $primary;
+            }
+
+            @media (max-width: 575px) {
+                img {
+                    height: 42px;
+                    width: 42px;
+                }
+            }
+        }
+    }
+}
+
 
 
 
