--- a/bootstrap_theme/pendigital/factory_cards.scss
+++ b/bootstrap_theme/pendigital/factory_cards.scss
@@ -2125,7 +2125,7 @@
 
         &:hover {
             background: $info;
-            border: 1px solid $pd-gray-200;
+            border: 1px solid $gray-200;
             color: $white;
 
             .pd-icon {
