--- a/bootstrap_theme/pendigital/factory_sections.scss
+++ b/bootstrap_theme/pendigital/factory_sections.scss
@@ -1229,7 +1229,6 @@
 }
 
 // end pd-section-17
-
 // start pd-section-18
 .pd-section-18 {
     position: relative;
@@ -1277,27 +1276,27 @@
         letter-spacing: 0.15em;
         font-weight: 700;
         font-size: 0.9rem;
-    
+
         .pd-icon {
             fill: $white;
         }
-    
+
         // box-shadow: 0px 4px 6px 1px rgba(0, 0, 0, 0.4);
         &:hover {
             // background: darken($info, 10%);
             background: $info;
             color: $white;
-    
+
             .pd-icon {
                 fill: $white;
             }
         }
-    
+
         &:focus {
             outline: 2px dotted $white;
             outline-offset: 4px;
         }
-    
+
         span {
             .pd-icon {
                 fill: $white;
@@ -1309,21 +1308,21 @@
         color: $pd-oxford-blue;
         background: transparent;
         border: 2px solid $pd-oxford-blue;
-    
+
         .pd-icon {
             fill: $pd-oxford-blue;
         }
-    
+
         &:hover {
             background: $info;
             border: 2px solid $pd-ochre;
             color: $white;
-    
+
             .pd-icon {
                 fill: $white;
             }
         }
-    
+
         &:focus {
             outline: 2px dotted $pd-ochre;
             outline-offset: 4px;
@@ -1399,6 +1398,169 @@
 }
 
 // end pd-section-18
+.pd-section-19 {
+    .pd-intro-heading-sm {
+        font-weight: 300;
+        font-size: 0.8rem;
+        letter-spacing: 0.1em;
+        text-transform: uppercase;
+    }
+
+    .pd-section-19-logo-img {
+        margin: 16px 0px;
+    }
+
+    .pd-headline {
+        font-weight: 700;
+        font-size: 2.8rem;
+
+        em {
+            font-style: normal;
+            color: $info;
+        }
+    }
+
+    .pd-subHeadline {
+        font-weight: 300;
+        font-size: 1.6rem;
+        line-height: 1.8;
+    }
+
+    .pd-section-19-grid-outer {
+        padding-top: 20px;
+        padding-bottom: 20px;
+
+        .pd-section-19-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 150px 150px;
+            grid-gap: 12px;
+            position: relative;
+
+            &::before,
+            &::after {
+                content: '';
+                position: absolute;
+                background-color: $info;
+
+                // Change to your border color
+                z-index: 1;
+            }
+
+            // Vertical line
+            &::before {
+                width: 1px;
+
+                // Border width
+                height: 100%;
+                top: 0;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+
+            // Horizontal line
+            &::after {
+                height: 1px;
+
+                // Border width
+                width: 100%;
+                left: 0;
+                top: 50%;
+                transform: translateY(-50%);
+            }
+        }
+    }
+
+    .pd-section-19-grid-card {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+
+        .pd-section-19-grid-card-headline {
+            font-weight: 700;
+            font-size: 2.4rem;
+            color: $info;
+
+            p {
+                margin-bottom: 0px;
+            }
+        }
+
+        .pd-section-19-grid-card-subHeadline {
+            font-weight: 700;
+            font-size: 1.2rem;
+            color: $info;
+
+            p {
+                margin-bottom: 0px;
+            }
+        }
+    }
+
+    .pd-btn {
+        padding: 20px 30px;
+        color: $info;
+        text-transform: normal;
+        background: transparent;
+        border: 2px solid $info;
+        transition: background 0.4s;
+        display: inline-block;
+        text-decoration: none;
+        letter-spacing: 0em;
+        font-weight: 700;
+        font-size: 1.2rem;
+
+        span {
+            margin-right: 8px;
+
+            .pd-icon {
+                fill: $info;
+            }
+        }
+
+        // box-shadow: 0px 4px 6px 1px rgba(0, 0, 0, 0.4);
+        &:hover {
+            // background: darken($info, 10%);
+            background: $info;
+            color: $white;
+
+            span {
+                .pd-icon {
+                    fill: $white;
+                }
+            }
+        }
+
+        &:focus {
+            outline: 2px dotted $white;
+            outline-offset: 4px;
+        }
+
+        span {
+            .pd-icon {
+                fill: $info;
+            }
+        }
+    }
+
+    .pd-section-19-hero-img-outer {
+        height: 100%;
+        position: relative;
+
+        img {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center center;
+            top: 0;
+            left: 0;
+        }
+
+    }
+}
 
 
 
