--- a/bootstrap_theme/pendigital/factory_sections.scss
+++ b/bootstrap_theme/pendigital/factory_sections.scss
@@ -1546,7 +1546,13 @@
     }
 
     .pd-section-19-hero-img-outer {
-        height: 100%;
+        @media screen and (max-width: 991px) {
+            height: 350px;
+        }   
+
+        @media (min-width: 992px) {
+            height: 100%;
+        }
         position: relative;
 
         img {
@@ -1560,6 +1566,171 @@
         }
 
     }
+}
+// end pd-section-19
+
+// start pd-section-20
+.pd-section-20 {
+
+    background: linear-gradient(rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.85) 30%, rgba(0, 0, 0, 0.85) 60%, rgba(0,0,0,1) 100%);
+
+    .pd-intro-heading-sm {
+        font-size: 0.9rem;
+        font-weight: 700;
+        color: $info;
+        margin-bottom: 30px;
+    }
+
+    .pd-headline {
+        font-size: 1.6rem;
+        font-weight: 700;
+        color: $white;
+        margin-bottom: 30px;
+
+    }
+
+    .pd-subHeadline {
+        font-size: 1.2rem;
+        font-weight: 300;
+        color: $white;
+        margin-bottom: 30px;
+
+        em {
+            font-style: normal;
+            font-weight: 700;
+            
+        }
+    }
+
+    .pd-section-20-results-txt {
+        font-weight: 700;
+        color: $info;
+        font-size: 0.9rem;
+        color: $white;
+    }
+
+    .pd-section-20-grid-outer {
+
+        padding: 0px 0px;
+        margin-bottom: 30px;
+
+        .pd-section-20-grid {
+            position: relative;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 100px;
+
+            &:before {
+                content: "";
+                width: 1px;
+                height: 100%;
+                background: $white;
+                position: absolute;
+                top: 0;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+
+            .pd-section-20-grid-card {
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: center;
+                
+                
+                .pd-section-20-card-headline {
+                    p {
+                        margin-bottom: 4px;
+                        font-weight: 700;
+                        font-size: 2rem;
+                        color: $white;
+                    }
+                }
+
+                .pd-section-20-card-subHeadline {
+                    p {
+                        margin-bottom: 4px;
+                        text-transform: uppercase;
+                        font-weight: 700;
+                        color: $white;
+                    }
+                }
+            }
+
+
+        }
+
+    }
+
+    .pd-btn {
+        padding: 18px 36px;
+        border-radius: 50em;
+        color: $white;
+        text-transform: normal;
+        background: transparent;
+        border: 2px solid $white;
+        transition: background 0.4s;
+        display: inline-block;
+        text-decoration: none;
+        letter-spacing: 0em;
+        font-weight: 700;
+        font-size: 1.2rem;
+
+        span {
+            margin-right: 8px;
+
+            .pd-icon {
+                fill: $white;
+            }
+        }
+
+        // box-shadow: 0px 4px 6px 1px rgba(0, 0, 0, 0.4);
+        &:hover {
+            // background: darken($info, 10%);
+            background: $info;
+            color: $white;
+
+            span {
+                .pd-icon {
+                    fill: $white;
+                }
+            }
+        }
+
+        &:focus {
+            outline: 2px dotted $white;
+            outline-offset: 4px;
+        }
+
+        span {
+            .pd-icon {
+                fill: $info;
+            }
+        }
+    }
+
+    .pd-section-20-hero-img-outer {
+        @media screen and (max-width: 991px) {
+            height: 350px;
+        }   
+
+        @media (min-width: 992px) {
+            height: 100%;
+        }
+        position: relative;
+
+        img {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center center;
+            top: 0;
+            left: 0;
+        }
+    }
+
+
 }
 
 
