--- a/bootstrap_theme/pendigital/factory_heroes.scss
+++ b/bootstrap_theme/pendigital/factory_heroes.scss
@@ -1669,6 +1669,200 @@
     }
 }
 
+// end pd-hero-15
+// start pd-hero-16
+.pd-hero-16 {
+    position: relative;
+    overflow: hidden;
+    min-height: 80vh;
+    padding-top: 80px;
+    padding-bottom: 80px;
 
+    figure {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        margin-bottom: 0px;
+
+        .pd-hero-16-img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center center;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 0;
+            opacity: 0;
+            transition: opacity 0.4s;
+        }
+
+        figcaption {
+            position: absolute;
+            z-index: 2;
+            bottom: 0;
+            font-weight: 400;
+            font-size: 0.8rem;
+            color: $white;
+            padding: 10px;
+
+            em {
+                font-weight: 700;
+                font-style: normal;
+            }
+
+            @media screen and (max-width: 991px) {
+                left: 50%;
+                transform: translateX(-50%);
+            }
+            
+            @media (min-width: 992px) {
+                left: 0;
+                
+            }
+        }
+    }
+
+    .pd-hero-16-img.pd-hero-16-img-loaded {
+        opacity: 1;
+    }
+
+    .pd-hero-16-overlay {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: linear-gradient(rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.05) 40%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.3) 100%);
+    }
+
+    .pd-hero-16-content-outer {
+        display: flex;
+
+        @media screen and (max-width: 991px) {
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+        }
+
+        @media (min-width: 992px) {
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: center;
+        }
+
+        .pd-hero-16-content-img-outer {
+            border: 1px solid #c5247F;
+            position: relative;
+            border-radius: 10px;
+            overflow: hidden;
+            z-index: 2;
+            box-shadow: 10px 10px 15px -5px rgba(0,0,0,0.59);
+            -webkit-box-shadow: 10px 10px 15px -5px rgba(0,0,0,0.59);
+            -moz-box-shadow: 10px 10px 15px -5px rgba(0,0,0,0.59);
+
+            @media screen and (max-width: 991px) {
+                width: 180px;
+                height: 180px;
+                position: relative;
+                overflow: hidden;
+                border-radius: 50em;
+            }
+
+            @media (min-width: 992px) {
+                width: 200px;
+                min-width: 200px;
+                height: auto;
+            }
+
+            img {
+                @media screen and (max-width: 991px) {
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    object-position: center center;
+                }
+
+                @media (min-width: 992px) {
+                    max-width: 200px;
+                    height: auto;
+                }
+            }
+        }
+
+        .pd-hero-16-content-text-outer {
+            position: relative;
+            background: linear-gradient(rgba(42, 42, 42, 0.95) 0%, rgba(42, 42, 42, 0.8) 40%, rgba(42, 42, 42, 0.8) 60%, rgba(42, 42, 42, 0.95) 100%);
+            z-index: 1;
+
+            // border: 1px solid #c5247F;
+            border-radius: 10px;
+
+            @media screen and (max-width: 991px) {
+                padding: 20px;
+                padding-top: 110px;
+                margin-top: -90px;
+                text-align: center;
+            }
+
+            @media (min-width: 992px) {
+                padding-top: 60px;
+                padding-bottom: 60px;
+                padding-left: 120px;
+                padding-right: 60px;
+                margin-left: -60px;
+            }
+        }
+    }
+
+    
+
+    .pd-intro-heading-sm {
+        font-size: 1rem;
+        color: $white;
+        font-weight: 700;
+    }
+
+    .pd-headline {
+        font-size: 2.4rem;
+        color: $white;
+        font-weight: 700;
+        margin-bottom: 0px;
+    }
+
+    .pd-subHeadline {
+        font-size: 1.4rem;
+        line-height: 1.5;
+        color: $white;
+    }
+
+    .pd-btn {
+        border: 2px solid #c5247f;
+        background: transparent;
+        transition: background 0.3s;
+        border-radius: 50em;
+        padding: 16px 30px;
+        margin-right: 20px;
+        margin-bottom: 30px;
+        text-decoration: none;
+        color: $white;
+        display: inline-block;
+        font-weight: 700;
+
+        .pd-icon {
+            width: 40px;
+            height: 40px;
+            margin-right: 6px;
+            fill: $white;
+        }
+
+        &:hover {
+            background: #c5247f;
+        }
+    }
+}
+
+// end pd-hero-16
 
 
